--- a/index.html
+++ b/index.html
@@ -5,63 +5,48 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>Sfrit</title>
 
-    <!-- Bootstrap -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../Sfruit//css//frame.css" rel="stylesheet">
+    <link href="../Sfruit//css//layout.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="wrap">
 
-        <!--这里是左边-->
-        <div id="left" class="left">
-            <!--这里是导航栏-->
-            <div class="navb">
-                <nav class="navbar-default">
-                    <div class="container-fluid">
-
-                        <!-- 这里是图标-->
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="#">
-                                <img alt="Brand" src="...">
-                            </a>
-                        </div>
-                        <!-- 这里是菜单栏-->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav">
-                                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                                <li><a href="#">Link</a></li>
-                                <li><a href="#">Link</a></li>
-                            </ul>
-                            <button type="button" class="btn btn-right pull-right" aria-label="Left Align">
-                                <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
-                            </button>
-                        </div>
-
+    <!--上部-->
+    <div class="container">
+        <div class="cnt1" id="nav1">
+            <nav class="navbar">
+                <div class="btn-group pull-right" role="group">
+                    <button type="button" class="btn btn-default" role="button">登陆</button>
+                    <button type="button" class="btn btn-default" role="button">注册</button>
+                </div>
+            </nav>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <form class="navbar-form pull-right">
+                    <div class="form-group navbar-right">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <button type="submit" class="btn btn-default pull-right">搜索</button>
                     </div>
-
-                </nav>
-            </div>
-
-
-            <!--下面写左边内容-->
+                </form>
+            </nav>
         </div>
-        <div id="right" class="tab-content right">
-
-            <!-- 这里写右边内容 -->
-        </div>
-        <footer>
-            <p>©版权所有 @2018软工项目组</p>
-            <p>保留所有权利
-                <p>
-        </footer>
     </div>
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    <!--中间-->
+    <div>
+
+    </div>
+    <!--页脚-->
+    <div class="footer">
+        <div class="container">
+            <div class="row footer-bottom">
+                <ul class="list-inline text-center">
+                    <li>版权所有 @2018软工小组 保留所有权力</li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
