--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Sfrit</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
     <link href="../Sfruit//css//layout.css" rel="stylesheet">
 </head>
 
@@ -33,8 +34,42 @@
         </div>
     </div>
     <!--中间-->
-    <div>
-
+    <div class="container">
+        <ul class="list-group">
+            <ul class="list-group1">
+                <li class="list-group-item">分类1</li>
+                <li class="list-group-item">分类2</li>
+                <li class="list-group-item">分类1</li>
+                <li class="list-group-item">分类2</li>
+                <li class="list-group-item">分类1</li>
+                <li class="list-group-item">分类2</li>
+            </ul>
+            <ul class="list-group1">
+                <li class="list-group-item">分类1</li>
+                <li class="list-group-item">分类2</li>
+                <li class="list-group-item">分类1</li>
+                <li class="list-group-item">分类2</li>
+                <li class="list-group-item">分类1</li>
+                <li class="list-group-item">分类2</li>
+            </ul>
+            <ul class="list-group1">
+                <li class="list-group-item">分类1</li>
+                <li class="list-group-item">分类2</li>
+                <li class="list-group-item">分类1</li>
+                <li class="list-group-item">分类2</li>
+                <li class="list-group-item">分类1</li>
+                <li class="list-group-item">分类2</li>
+            </ul>
+        </ul>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
     </div>
     <!--页脚-->
     <div class="footer">
@@ -46,8 +81,9 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 
-</html>
+</html>s
