--- a/index.html
+++ b/index.html
@@ -1,149 +1,185 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sfrit</title>
-    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-
-    <link href="../Sfruit//css//layout.css" rel="stylesheet">
 </head>
 
 <body>
+    <!--顶部栏-->
+    <div class="container">
+        <div id="index_wrapper">
+            <div class="cnt1" id="nav1">
+                <nav class="navbar justify-content-end">
+                    <span id="span1">每日优选水果</span>
+                    <div class="btn-group pull-right" role="group" id="button_group">
+                        <button type="button" id="denglu" class="btn btn-default" role="button">登录</button>
+                        <button type="button" id="zhuce" class="btn btn-default" role="button">注册</button>
+                    </div>
+                </nav>
+                <nav class="navbar justify-content-end">
+                    <span id="span2">天天营养健康</span>
+                    <form class="form-inline">
+                        <div class="form-group navbar-right" id="search">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-default" id="sousuo" type="submit">搜索</button>
+                        </div>
+                    </form>
+                </nav>
+            </div>
+            <!--内容-->
+            <div id="index_back">
+                <div id="index_content">
+                    <div id="classify_content">
+                        <div class="row classify">
+                            <div id="shop" class="col-md-2 classify_title">商家</div>
+                            <ul id="shopper" class="col-md-10 nav nav-pills classify_detail" role="tablist">
+                                <li class="col-md-3 nav-item">
+                                    <a class="nav-link" font-size="0.8em" role="tab" data-toggle="tab" aria-controls="shooper1">商家1</a>
+                                </li>
+                                <li class="col-md-3 nav-item">
+                                    <a class="nav-link" font-size="0.8em" role="tab" data-toggle="tab" aria-controls="shooper2">商家2</a>
+                                </li>
+                                <li class="col-md-3 nav-item">
+                                    <a class="nav-link" font-size="0.8em" role="tab" data-toggle="tab" aria-controls="shooper3">商家3</a>
+                                </li>
+                                <li class="col-md-3 nav-item">
+                                    <a class="nav-link" font-size="0.8em" role="tab" data-toggle="tab" aria-controls="shooper4">商家4</a>
+                                </li>
+                            </ul>
 
-    <!--上部-->
-    <div class="container">
-        <div class="cnt1" id="nav1">
-            <nav class="navbar justify-content-end">
-                <button type="button" id="denglu" class="btn btn-default" role="button">登陆</button>
-                <button type="button" id="zhuce" class="btn btn-default" role="button">注册</button>
-            </nav>
-            <nav class="navbar justify-content-end">
-                <form class="form-inline">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" id="sousuo" type="submit">搜索</button>
-                </form>
-            </nav>
-        </div>
-    </div>
-    <!--中间-->
-    <div class="container">
-        <ul class="list-group">
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">分类1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Another link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">分类2</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Another link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">分类3</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Another link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-        </ul>
-        <div class="card-deck">
-            <div class="card">
-                <img class="card-img-top" src="C:\Users\LiChao\Desktop\水果图片\水果图片/9f738d16e88b33c68b4d6f54e547d9c5.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">香蕉</h5>
-                    <p class="card-text">这是香蕉</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="C:\Users\LiChao\Desktop\水果图片\水果图片/9f738d16e88b33c68b4d6f54e547d9c5.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">香蕉</h5>
-                    <p class="card-text">这是香蕉</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="C:\Users\LiChao\Desktop\水果图片\水果图片/9f738d16e88b33c68b4d6f54e547d9c5.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">香蕉</h5>
-                    <p class="card-text">这是香蕉</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="C:\Users\LiChao\Desktop\水果图片\水果图片/9f738d16e88b33c68b4d6f54e547d9c5.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">香蕉</h5>
-                    <p class="card-text">这是香蕉</p>
-                </div>
-            </div>
-        </div>
-        <div class="card-deck">
-            <div class="card">
-                <img class="card-img-top" src="C:\Users\LiChao\Desktop\水果图片\水果图片/9f738d16e88b33c68b4d6f54e547d9c5.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">香蕉</h5>
-                    <p class="card-text">这是香蕉</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="C:\Users\LiChao\Desktop\水果图片\水果图片/9f738d16e88b33c68b4d6f54e547d9c5.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">香蕉</h5>
-                    <p class="card-text">这是香蕉</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="C:\Users\LiChao\Desktop\水果图片\水果图片/9f738d16e88b33c68b4d6f54e547d9c5.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">香蕉</h5>
-                    <p class="card-text">这是香蕉</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="C:\Users\LiChao\Desktop\水果图片\水果图片/9f738d16e88b33c68b4d6f54e547d9c5.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">香蕉</h5>
-                    <p class="card-text">这是香蕉</p>
+                        </div>
+                        <div class="row classify">
+                            <div class="col-md-2 classify_title">种类</div>
+                            <div class="col-md-10 nav nav-pills classify_detail">
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">苹果</a>
+                                </div>
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">香蕉</a>
+                                </div>
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">荔枝</a>
+                                </div>
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">樱桃</a>
+                                </div>
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">杏子</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row classify">
+                            <div class="col-md-2 classify_title">国产/进口</div>
+                            <div class="col-md-10 nav nav-pills classify_detail">
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">国产</a>
+                                </div>
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">进口</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row classify">
+                            <div class="col-md-2 classify_title">原产地</div>
+                            <div class="col-md-10 nav nav-pills classify_detail">
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">中国</a>
+                                </div>
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">越南</a>
+                                </div>
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">荷兰</a>
+                                </div>
+                                <div class="col-md-3 nav-item">
+                                    <a class="nav-link" href="#" font-size="0.8em">美国</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card-deck">
+                        <div class="card">
+                            <img class="card-img-top" src="/Images/banana.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">香蕉</h5>
+                                <p class="card-text">这是香蕉</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="/Images/banana.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">香蕉</h5>
+                                <p class="card-text">这是香蕉</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="/Images/banana.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">香蕉</h5>
+                                <p class="card-text">这是香蕉</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="/Images/banana.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">香蕉</h5>
+                                <p class="card-text">这是香蕉</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-deck">
+                        <div class="card">
+                            <img class="card-img-top" src="/Images/banana.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">香蕉</h5>
+                                <p class="card-text">这是香蕉</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="/Images/banana.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">香蕉</h5>
+                                <p class="card-text">这是香蕉</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="/Images/banana.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">香蕉</h5>
+                                <p class="card-text">这是香蕉</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="/Images/banana.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">香蕉</h5>
+                                <p class="card-text">这是香蕉</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
     <!--页脚-->
     <div class="footer text-center">
-        版权所有 @2018软工小组 保留所有权力
+        版权所有 @2018软工小组 保留所有权利
     </div>
-    <script type="text/javascript" src="../Sfruit/js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
