--- a/UserCenter/BuyerCenter.html
+++ b/UserCenter/BuyerCenter.html
@@ -15,7 +15,7 @@
 <body>
 
     <h2>用户个人中心</h2>
-    <div class="bg" style="background-image: url(../../Image/背景图7.jpg);">
+    <div class="bg">
         <div class="row" style="padding-top: 10%;">
             <div class="col-md-2 col-md-offset-5">
                 <div class="portrait"></div>
